[project]
name = "wsp-tasha-toolbox"
dynamic = ["version"]
authors = [
    { name = "Brian Cheung", email = "brian.cheung@wsp.com" }
]
description = "Python tools for working with TASHA-based models"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandera>=0.24.0",
    "pyproj>=3.7.1",
    "wsp-balsa>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/sap-toronto/wsp-tasha-toolbox"
Issues = "https://github.com/sap-toronto/wsp-tasha-toolbox/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1,<2",
    "twine>=6.0.1,<7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/wsp_tasha_toolbox/_version.py"
